--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "watch:css": "postcss src/assets/css/tailwind.css -o src/assets/css/app.main.css"
+    "watch:css": "postcss src/assets/css/tailwind.css -o src/assets/css/appmain.min.css"
   },
   "eslintConfig": {
     "extends": [
